# OSDSYS

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
assets/: manifest.json
assets/fonts/: FONTM.fbj2
shaders/: basic.frag  basic.vert  postfx.frag  sprite.frag  sprite.vert  text.frag  text.vert
src/: Assets.cpp  Assets.h  Core.cpp  Core.h  FontLoader.cpp  FontLoader.h  ICOBLoader.cpp  ICOBLoader.h  MathTypes.h  PS2Constants.h  PS2Math.h  Platform.h  Renderer.cpp  Renderer.h  SoundLoader.cpp  SoundLoader.h  TextureLoader.cpp  TextureLoader.h  VAGDecoder.cpp  VAGDecoder.h  main.cpp
src/scenes/: BootScene.cpp  BootScene.h  BrowserScene.cpp  BrowserScene.h  DebugFontScene.cpp  DebugFontScene.h  DebugSoundScene.cpp  DebugSoundScene.h  DebugTextureScene.cpp  DebugTextureScene.h  DebugVu1Scene.cpp  DebugVu1Scene.h  MenuScene.cpp  MenuScene.h  SCELogoScene.cpp  SCELogoScene.h  Scene.h
